@@ -66,6 +66,10 @@ db.maxidle = -1
 # SMTP mail server
 mail.server=smtp.myu.edu
 
+# SMTP mail server authentication username and password (if required)
+# mail.server.username = myusername
+# mail.server.password = mypassword
+
 # From address for mail
 mail.from.address = dspace-noreply@myu.edu
 
